--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </script>
 </head>
 <body>
-    <h1>This is my site11!</h1>
+    <h1>This is my site23456789!</h1>
+    <script src="counter.js"></script>
 </body>
 </html>
